bwa-mem3-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_BwaIdBases() {
    const UNINIT: ::std::mem::MaybeUninit<BwaIdBases> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<BwaIdBases>(),
        16usize,
        concat!("Size of: ", stringify!(BwaIdBases))
    );
    assert_eq!(
        ::std::mem::align_of::<BwaIdBases>(),
        8usize,
        concat!("Alignment of ", stringify!(BwaIdBases))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).first_single_id) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaIdBases),
            "::",
            stringify!(first_single_id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).first_pair_id) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(BwaIdBases),
            "::",
            stringify!(first_pair_id)
        )
    );
}
pub type BwaRecordSinkFn = ::std::option::Option<
    unsafe extern "C" fn(
        ctx: *mut ::std::os::raw::c_void,
        origin_kind: u32,
        origin_idx: usize,
        body: *const u8,
        body_len: usize,
    ),
>;
extern "C" {
    pub fn bwa_shim_pestat_cohort(
        idx: *const BwaIndex,
        opts: *const mem_opt_t,
        regs: *const *const BwaRegs,
        n_regs: usize,
        out: *mut mem_pestat_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_pair_emit(
        idx: *const BwaIndex,
        opts: *const mem_opt_t,
        sc: *mut BwaScratch,
        regs: *mut BwaRegs,
        pestat: *const mem_pestat_t,
        ids: BwaIdBases,
        sink: BwaRecordSinkFn,
        ctx: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_resident_cohort_new(meth_mode: ::std::os::raw::c_int)
        -> *mut BwaResidentCohort;
}
extern "C" {
    pub fn bwa_shim_resident_cohort_free(c: *mut BwaResidentCohort);
}
extern "C" {
    pub fn bwa_shim_resident_read_overhead() -> usize;
}
extern "C" {
    pub fn bwa_shim_resident_reserve_pairs(
        c: *mut BwaResidentCohort,
        n_reads: usize,
        first_out: *mut usize,
    ) -> *mut BwaResidentSegment;
}
extern "C" {
    pub fn bwa_shim_resident_reserve_singles(
        c: *mut BwaResidentCohort,
        n_reads: usize,
        first_out: *mut usize,
    ) -> *mut BwaResidentSegment;
}
extern "C" {
    pub fn bwa_shim_resident_write_pair(
        sg: *mut BwaResidentSegment,
        i: usize,
        pair: *const BwaReadPair,
        added: *mut usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_resident_write_single(
        sg: *mut BwaResidentSegment,
        i: usize,
        single: *const BwaSingleRead,
        added: *mut usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_resident_write_pairs(
        sg: *mut BwaResidentSegment,
        pairs: *const BwaReadPair,
        n: usize,
        added: *mut usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_resident_write_singles(
        sg: *mut BwaResidentSegment,
        reads: *const BwaSingleRead,
        n: usize,
        added: *mut usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_resident_seed_extend(
        idx: *const BwaIndex,
        opts: *const mem_opt_t,
        sc: *mut BwaScratch,
        sg: *mut BwaResidentSegment,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_resident_pestat_cohort(
        idx: *const BwaIndex,
        opts: *const mem_opt_t,
        c: *const BwaResidentCohort,
        out: *mut mem_pestat_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_resident_pair_emit(
        idx: *const BwaIndex,
        opts: *const mem_opt_t,
        sc: *mut BwaScratch,
        sg: *mut BwaResidentSegment,
        pestat: *const mem_pestat_t,
        ids: BwaIdBases,
        origin_base: usize,
        sink: BwaRecordSinkFn,
        ctx: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_resident_pair_emit_fields(
        idx: *const BwaIndex,
        opts: *const mem_opt_t,
        sc: *mut BwaScratch,
        sg: *mut BwaResidentSegment,
        pestat: *const mem_pestat_t,
        ids: BwaIdBases,
        origin_base: usize,
        sink: BwaFieldSinkFn,
        ctx: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_batch_n_records(b: *const BwaBatch) -> usize;
}
extern "C" {
    pub fn bwa_shim_batch_pair_idx(b: *const BwaBatch, rec: usize) -> usize;
}
extern "C" {
    pub fn bwa_shim_batch_record_ptr(b: *const BwaBatch, rec: usize) -> *const u8;
}
extern "C" {
    pub fn bwa_shim_batch_record_len(b: *const BwaBatch, rec: usize) -> usize;
}
extern "C" {
    pub fn bwa_shim_batch_free(b: *mut BwaBatch);
}
extern "C" {
    pub fn bwa_shim_last_error() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn bwa_shim_set_verbosity(level: ::std::os::raw::c_int);
}
extern "C" {
    pub fn bwa_shim_version() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn bwa_shim_build_info() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn bwa_shim_shm_test(prefix: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_shm_stage(prefix: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_shm_destroy() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_shm_list() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bwa_shim_set_rg_id(id: *const ::std::os::raw::c_char);
}
